# ASLCI

./: README.md  add.lc  dune-project  dune-project~  hofs.lc  identity.lc  identity.lc~  multiply.lc~  multiplyiszero.lc  pair.lc
_build/: .db  .digest-db  log
_build/default/: ASLCI.dune-package  ASLCI.install  ASLCI.opam  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: Lexer.ml  Lexer.mll  Parser.conflicts  Parser.ml  Parser.mli  Parser.mly  Parser__mock.ml.mock  Parser__mock.mli.inferred  ast.ml  lib.cma  lib.cmxa  lib.cmxs  lib.ml-gen  parsing.cma  parsing.cmxa  parsing.cmxs  parsing.ml-gen  type.ml
_build/default/lib/.lib.objs/: lib__Eval.impl.all-deps  lib__Eval.impl.d  lib__Lexer.impl.all-deps  lib__Parser.impl.all-deps  lib__ParserInterface.impl.all-deps  lib__Type.impl.d
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Ast.cmi  lib__Ast.cmo  lib__Ast.cmt  lib__Eval.cmi  lib__Eval.cmo  lib__Eval.cmt  lib__Lexer.cmi  lib__Lexer.cmo  lib__Type.cmi  (+10 more)
_build/default/lib/.merlin-conf/: lib-lib  lib-parsing
_build/default/lib/.parsing.objs/: parser__mock.impl.all-deps  parsing__Ast.impl.d  parsing__Lexer.impl.all-deps  parsing__ParserInterface.impl.all-deps  parsing__ParserInterface.impl.d
_build/default/test/.merlin-conf/: exe-test_ASLCI
_build/default/test/.test_ASLCI.eobjs/: dune__exe.ml-gen  dune__exe__Test_ASLCI.impl.d  dune__exe__Test_ASLCI.intf.d
lib/: #Parser.mly#  .#Parser.mly  Lexer.mll  Parser.mly  ast.ml  dune  dune~  eval.ml  eval.ml~  parserInterface.ml  type.ml  type.ml~
test/: dune
(+38 files in other folders)
